compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/EnumCompanion.kt
// pack.CompanionContainer
package pack

class CompanionContainer {
    enum companion object
}
